// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`wired-method snapshots should display complete correctly 1`] = `
<x-wired-method>
  Name: 
  <br />
  Error: 
</x-wired-method>
`;

exports[`wired-method snapshots should display data correctly 1`] = `
<x-wired-method>
  Name: 
  name
  <br />
  Error: 
</x-wired-method>
`;

exports[`wired-method snapshots should display error correctly 1`] = `
<x-wired-method>
  Name: 
  <br />
  Error: 
  error message
</x-wired-method>
`;
